script/iptables.ipv4.conf
#FILTER
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

# Drop all invalid packets
-A INPUT -m state --state INVALID -j DROP
-A FORWARD -m state --state INVALID -j DROP
-A OUTPUT -m state --state INVALID -j DROP
# Block communications between devices on the network
-A FORWARD -s 192.168.8.0/24 -d 192.168.8.0/24 -j DROP
### block flooding attack
-A OUTPUT -p udp --dport 53 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
-A OUTPUT -p udp --dport 67 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
-A OUTPUT -p udp --dport 68 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
-A OUTPUT -p udp --dport 547 -j ACCEPT
-A INPUT -p udp --sport 53 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
-A INPUT -p udp --sport 67 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
-A INPUT -p udp --sport 68 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
-A INPUT -p udp --sport 547  -j ACCEPT
#### tcp for dhcp and dns are not needed
#-A OUTPUT -o wlan0 -p tcp --sport 53 -j ACCEPT
#-A OUTPUT -o wlan0 -p tcp --sport 67 -j ACCEPT
#-A OUTPUT -o wlan0 -p tcp --sport 68 -j ACCEPT
#-A INPUT -i wlan0 -p tcp --dport 53 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
#-A INPUT -i wlan0 -p tcp --dport 67 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
#-A INPUT -i wlan0 -p tcp --dport 68 -m limit --limit 10/s --limit-burst 10 -j ACCEPT
### 8: Limit 100 connections per source IP ###
-A INPUT -p tcp -m connlimit --connlimit-above 100 -j REJECT --reject-with tcp-reset
# localhost
-A INPUT -i lo -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
# private network
-A INPUT -i wlan0 -p tcp --dport 22 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp --sport 22 -j ACCEPT
-A INPUT -i wlan0 -p tcp --dport 80 -j ACCEPT
-A OUTPUT -o wlan0 -p tcp --sport 80 -j ACCEPT
# incoming (spyke)
-A INPUT -i eth0 -p tcp -m multiport --dports 22,53,67,80,443,8080 -m limit --limit 60/s --limit-burst 20 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m multiport --sports 22,53,67,80,443,8080 -m state --state ESTABLISHED -j ACCEPT
# outgoing (git)
-A INPUT -i eth0 -p tcp -m multiport --sports 22,53,80,443,9418 -m limit --limit 60/s --limit-burst 20 -j ACCEPT
-A OUTPUT -o eth0 -p tcp -m multiport --dports 22,53,80,443,9418 -m limit --limit 60/s --limit-burst 20 -j ACCEPT
COMMIT

#NAT
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# mask outgoing ip
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT

# MANGLE
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
# log outgoing packet
-A POSTROUTING -s 192.168.8.0/24 -j LOG --log-prefix "[spyke - log]"
### log all network packets
#-A INPUT -s 192.168.8.0/24 -j LOG --log-prefix "[spyke - input]"
#-A OUTPUT -d 192.168.8.0/24 -j LOG --log-prefix "[spyke - output]"
#-A FORWARD -s 192.168.8.0/24 -d 192.168.8.0/24 -j LOG --log-prefix "[spyke - forward]"
COMMIT
